--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@ td, th {
 </style>
 </head>
 <body>
+  <h2>Status update (14 Feb 2022):</h2> 
+  <p>This collection is now over three years old, and the locations of the processed data may have
+    changed. There are several ongoing efforts to redo the processing. We will update these pointers
+    as we upload the newest versions of the processed data.
+  </p>
 <h2>Projects:</h2>
 <table>
   <tr>
